--- a/data_etad/index.html
+++ b/data_etad/index.html
@@ -10,7 +10,7 @@
 
 
 
-<meta name="date" content="2025-07-13" />
+<meta name="date" content="2025-07-16" />
 
 <title>ETAD: Election Timing across Democracy and Autocracy</title>
 
@@ -548,7 +548,7 @@ display: none;
 <h1 class="title toc-ignore">ETAD: Election Timing across Democracy and
 Autocracy</h1>
 <h3 class="subtitle">A Global Dataset of National Election Dates</h3>
-<h4 class="date">2025-07-13</h4>
+<h4 class="date">2025-07-16</h4>
 
 </div>
 
@@ -576,8 +576,7 @@ and Democracy (ETAD): A New Dataset of National Election Dates.’’
 <p>The ETAD data will be available soon.</p>
 <ul>
 <li><a href="ETAD_v_1_0_0.csv">ETAD dataset, v.1.0.0</a> (CSV)</li>
-<!--<li><a href="ETAD_codebook_ver_1.pdf">ETAD Codebook</a> (PDF)</li>-->
-<li>ETAD Codebook (to be added soon)</li>
+<li><a href="ETAD_codebook_ver_1.pdf">ETAD Codebook</a> (PDF)</li>
 </ul>
 <p>Alternatively, you can install our <a href="https://github.com/yukiyanai/ETAD">R package to use ETAD in R</a>.
 To get a GitHub version, run:</p>
