--- a/data_etad/index.html
+++ b/data_etad/index.html
@@ -566,9 +566,9 @@ elections in 148 countries from 1945 to 2023.</p>
 <p>Please cite the following paper when you use the ETAD data.</p>
 <ul>
 <li>Higashijima, Masaaki, Naoki Shimizu, Hidekuni Washida, and Yuki
-Yanai. (<em>forthcoming</em> 2025). ``Election Timing across Autocracy
-and Democracy (ETAD): A New Dataset of National Election Dates.’’
-<em>Electoral Studies</em> (accepted for publication)</li>
+Yanai. (<em>forthcoming</em>). “Election Timing across Autocracy and
+Democracy (ETAD): A New Dataset of National Election Dates.”
+<em>Electoral Studies</em> (accepted for publication, 2025).</li>
 </ul>
 </div>
 <div id="data" class="section level2">
