--- a/resources/index.html
+++ b/resources/index.html
@@ -37,12 +37,56 @@
       <div class="content">
         <h2>Resources</h2>
 
+        <h3>Datasets</h3>
+        <ul>
+          <li>
+            <a href="https://yukiyanai.github.io/data_etad/" target="_blank"
+              >Election Timing across Autocracy and Democracy (ETAD)</a
+            >: A dataset of national election dates
+          </li>
+          <li>
+            Results of the Japanese National Elections
+            <br /><br />
+            <ul>
+              <li>
+                <a
+                  href="https://yukiyanai.github.io/jp/resources/data/hr2021election.html"
+                  target="_blank"
+                  >The 2021 General Election</a
+                >
+                (the 49th House of Representatives Election)
+              </li>
+              <li>
+                <a
+                  href="https://yukiyanai.github.io/jp/resources/data/hc2022election.html"
+                  target="_blank"
+                  >The 2022 Upper House Election</a
+                >
+                (the 26th House of Councillors Election)
+              </li>
+              <li>
+                <a
+                  href="https://yukiyanai.github.io/jp/resources/data/hr2024election.html"
+                  target="_blank"
+                  >The 2024 General Election</a
+                >
+                (the 50th House of Representatives Election)
+              </li>
+            </ul>
+          </li>
+        </ul>
+
         <h3>R Packages</h3>
         <ul>
           <li>
             <a href="https://yukiyanai.github.io/rgamer/" target="_blank"
               >rgamer</a
             >: Learn game theory using R
+          </li>
+          <li>
+            <a href="https://github.com/yukiyanai/ETAD" target="_blank">ETAD</a>
+            (Election Timing across Autocracy and Democracy): A dataset of
+            national election dates.
           </li>
         </ul>
 
