--- a/jp/resources/index.html
+++ b/jp/resources/index.html
@@ -36,6 +36,13 @@
   <!-- InstanceBeginEditable name="content" -->
   <div class="content">
 
+  <h2>ETAD: 選挙タイミングのデータ</h2>
+    <ul>
+      <li>データ：<a href="https://yukiyanai.github.io/data_etad/" target="_blank">Election Timing across Autocracy and Democracy</a></li>
+      <li>Rパッケージ：<a href="https://github.com/yukiyanai/ETAD/" target="_blank">ETAD</a></li>
+      <!--<li>関連論文<a href="" target="_blank"></a></li>-->
+    </ul>
+
   <h2>第50回衆議院議員総選挙（2024年10月27日実施）の結果</h2>
     <ul>
       <li>小選挙区：<a href="data/hr2024_districts.csv">CSVファイル</a></li>
@@ -68,6 +75,7 @@
   <h2>R パッケージ</h2>
     <ul>
       <li><a href="https://yukiyanai.github.io/rgamer/" target="_blank">rgamer</a>: ゲーム理論を学ぶためのRパッケージ</li>
+      <li><a href="https://github.com/yukiyanai/ETAD/" target="_blank">ETAD</a>: 選挙タイミングに関するグローバルデータセット</li>
     </ul>
   
   <h2>Beamer用テーマ</h2>
