--- a/jp/publications/index.html
+++ b/jp/publications/index.html
@@ -44,8 +44,14 @@
         <h3>論文</h3>
         <ul>
           <li>
-          Election Timing across Autocracy and Democracy (ETAD): A New Dataset of National Election Dates（<a href="https://masaakihigashijima.com/" target="_blank"
-              >東島雅昌</a>, 清水直樹, 鷲田任邦と共著） <a class="booktitle">Electoral Studies</a> (accepted for publication, 2025)
+            Election Timing across Autocracy and Democracy (ETAD): A New Dataset
+            of National Election Dates（<a
+              href="https://masaakihigashijima.com/"
+              target="_blank"
+              >東島雅昌</a
+            >, 清水直樹, 鷲田任邦と共著）
+            <a class="booktitle">Electoral Studies</a> (accepted for
+            publication, 2025)
           </li>
           <li>
             <a href="https://doi.org/10.1093/poq/nfae022" target="_blank"
@@ -56,6 +62,12 @@
               >東島雅昌</a
             >, 門屋寿と共著）
             <a class="booktitle">Public Opinion Quarterly</a> 88: 472-494 (2024)
+            [<a
+              class="abst"
+              href="https://doi.org/10.7910/DVN/JT6Q4K"
+              target="_blank"
+              >分析再現用データ</a
+            >]
           </li>
           <li>
             <a href="https://doi.org/10.1017/S1468109920000122" target="_blank"
@@ -253,8 +265,9 @@
 
         <ul>
           <li>
-          「統計的因果推論」（pp.66-67）,「重回帰」(pp.70-71). 日本比較政治学会（編）『比較政治学事典』（2025年1月, 丸善出版）
-          <div class="exp">
+            「統計的因果推論」（pp.66-67）,「重回帰」(pp.70-71).
+            日本比較政治学会（編）『比較政治学事典』（2025年1月, 丸善出版）
+            <div class="exp">
               ISBN: 978-4621309995&nbsp;&nbsp;
               <a href="http://amazon.co.jp/dp/4621309994/" target="_blank"
                 >amazon.co.jp</a
