--- a/research/index.html
+++ b/research/index.html
@@ -38,10 +38,13 @@
         <h3>Journal Articles</h3>
         <ul>
           <li>
-          Election Timing across Autocracy and Democracy (ETAD): A New Dataset of National Election Dates（with <a href="https://masaakihigashijima.com/" target="_blank"
-              >Masaaki Higashijima</a>,
-              Naoki Shimizu, and Hidekuni Washida)
-              <a class="booktitle">Electoral Studies</a> (accepted for publication, 2025)
+            Election Timing across Autocracy and Democracy (ETAD): A New Dataset
+            of National Election Dates（with
+            <a href="https://masaakihigashijima.com/" target="_blank"
+              >Masaaki Higashijima</a
+            >, Naoki Shimizu, and Hidekuni Washida)
+            <a class="booktitle">Electoral Studies</a> (accepted for
+            publication, 2025)
           </li>
 
           <li>
@@ -56,6 +59,12 @@
             >
             and Hisashi Kadoya)
             <a class="booktitle">Public Opinion Quarterly</a> 88: 472-494 (2024)
+            [<a
+              class="abst"
+              href="https://doi.org/10.7910/DVN/JT6Q4K"
+              target="_blank"
+              >Replication Materials</a
+            >]
           </li>
           <li>
             <a href="https://doi.org/10.1017/S1468109920000122" target="_blank"
