update 2025 HC election (pref) res

--- a/jp/resources/index.html
+++ b/jp/resources/index.html
@@ -42,7 +42,24 @@
       <li>Rパッケージ：<a href="https://github.com/yukiyanai/ETAD/" target="_blank">ETAD</a></li>
       <!--<li>関連論文<a href="" target="_blank"></a></li>-->
     </ul>
-
+    
+  <h2>R パッケージ</h2>
+    <ul>
+      <li><a href="https://yukiyanai.github.io/rgamer/" target="_blank">rgamer</a>：ゲーム理論を学ぶためのRパッケージ</li>
+      <li><a href="https://github.com/yukiyanai/ETAD/" target="_blank">ETAD</a>：選挙タイミングに関するグローバルデータセット</li>
+    </ul>
+  
+  <h2>第27回参議院議員通常選挙（2025年7月20日実施）の結果</h2>
+    <ul>
+      <li>選挙区：<a href="data/hc2025_prefectures.csv">CSVファイル</a></li>
+      <!--<li>比例区（候補者別）：<a href="data/hc2025_pr_candidates.csv">CSVファイル</a></li>
+      <li>比例区（政党別）：<a href="data/hc2025_pr_parties.csv">CSVファイル</a></li>-->
+      <li>比例区（候補者別）：集計中</li>
+      <li>比例区（政党別）：集計中</li>
+      <li><a href="data/hc2025election.html" target="_blank">データに含まれる変数の説明</a></li>
+      <li><p>データの文字コードは UTF-8 です。</p></li>
+    </ul>
+    
   <h2>第50回衆議院議員総選挙（2024年10月27日実施）の結果</h2>
     <ul>
       <li>小選挙区：<a href="data/hr2024_districts.csv">CSVファイル</a></li>
@@ -72,13 +89,7 @@
   
   
 
-  <h2>R パッケージ</h2>
-    <ul>
-      <li><a href="https://yukiyanai.github.io/rgamer/" target="_blank">rgamer</a>: ゲーム理論を学ぶためのRパッケージ</li>
-      <li><a href="https://github.com/yukiyanai/ETAD/" target="_blank">ETAD</a>: 選挙タイミングに関するグローバルデータセット</li>
-    </ul>
-  
-  <h2>Beamer用テーマ</h2>
+    <h2>Beamer用テーマ</h2>
     <h3>高知工科大学用テーマ</h3>
     <ul>
       <li><a href="https://github.com/yukiyanai/KUT-Beamer" target="_blank">KUT-Beamer</a> (GitHub)</li>
