--- a/resources/index.html
+++ b/resources/index.html
@@ -72,6 +72,14 @@
                 >
                 (the 50th House of Representatives Election)
               </li>
+              <li>
+                <a
+                  href="https://yukiyanai.github.io/jp/resources/data/hc2025election.html"
+                  target="_blank"
+                  >The 2025 Upper House Election</a
+                >
+                (the 27th House of Councillors Election)
+              </li>
             </ul>
           </li>
         </ul>
