update the 2025 election results (PR)

--- a/jp/resources/data/hc2025election.html
+++ b/jp/resources/data/hc2025election.html
@@ -15780,49 +15780,61 @@
         </div>
         <div id="比例区候補者-pr-candidates" class="section level3">
           <h3>比例区：候補者 (PR: Candidates)</h3>
-          集計中
-          <!--
-<p><br> <a href="hc2025_pr_candidates.csv"><strong>2025参院選比例全国区候補者別データ</strong>（CSVファイル）</a>
-<br><br></p>
-<p>含まれている変数は以下のとおり。</p>
-<ul>
-<li><code>party</code>: 政党</li>
-<li><code>priority</code>: 特定枠であることを示すダミー</li>
-<li><code>name</code>: 候補者の氏名（姓と名の間に半角スペース）</li>
-<li><code>yomi</code>: 候補者氏名の読み（姓と名の間に半角スペース）</li>
-<li><code>lastname</code>: 候補者の姓</li>
-<li><code>firstname</code>: 候補者の名</li>
-<li><code>last_kana</code>: 候補者の姓の読み</li>
-<li><code>first_kana</code>: 候補者の名の読み</li>
-<li><code>age</code>: 年齢</li>
-<li><code>status</code>: 元（元職）、前（前職）、新（新人）</li>
-<li><code>previous</code>: 過去の当選回数</li>
-<li><code>home</code>: 居住都道府県</li>
-<li><code>win</code>: 当選を示すダミー</li>
-<li><code>votes</code>: 得票数</li>
-</ul>
--->
+
+          <p>
+            <br />
+            <a href="hc2025_pr_candidates.csv"
+              ><strong>2025参院選比例全国区候補者別データ</strong
+              >（CSVファイル）</a
+            >
+            <br /><br />
+          </p>
+          <p>含まれている変数は以下のとおり。</p>
+          <ul>
+            <li><code>party</code>: 政党</li>
+            <li><code>priority</code>: 特定枠であることを示すダミー</li>
+            <li><code>name</code>: 候補者の氏名（姓と名の間に半角スペース）</li>
+            <li>
+              <code>yomi</code>: 候補者氏名の読み（姓と名の間に半角スペース）
+            </li>
+            <li><code>lastname</code>: 候補者の姓</li>
+            <li><code>firstname</code>: 候補者の名</li>
+            <li><code>last_kana</code>: 候補者の姓の読み</li>
+            <li><code>first_kana</code>: 候補者の名の読み</li>
+            <li><code>age</code>: 年齢</li>
+            <li><code>status</code>: 元（元職）、前（前職）、新（新人）</li>
+            <li><code>previous</code>: 過去の当選回数</li>
+            <li><code>home</code>: 居住都道府県</li>
+            <li><code>win</code>: 当選を示すダミー</li>
+            <li><code>votes</code>: 得票数</li>
+          </ul>
+
           <hr />
         </div>
         <div id="比例区政党-pr-political-parties" class="section level3">
           <h3>比例区：政党 (PR: Political Parties)</h3>
-          集計中
-          <!--
-<p><br> <a href="hc2025_pr_parties.csv"><strong>2025参院選比例全国区政党別データ</strong>（CSVファイル）</a>
-<br><br></p>
-<p>含まれている変数は以下のとおり。</p>
-<ul>
-<li><code>party</code>: 政党</li>
-<li><code>n_cand</code>: 名簿掲載人数</li>
-<li><code>n_priority</code>: 特定枠候補の人数</li>
-<li><code>seats_won</code>: 比例区での獲得議席数</li>
-<li><code>votes_party</code>: 政党名での得票数</li>
-<li><code>votes_cand</code>: 所属候補者名での得票数</li>
-<li><code>votes_total</code>: 総得票数（votes_party と votes_cand
-の合計）</li>
-<li><code>vshare</code>: 比例区での相対得票率 (%)</li>
-</ul>
--->
+          <p>
+            <br />
+            <a href="hc2025_pr_parties.csv"
+              ><strong>2025参院選比例全国区政党別データ</strong
+              >（CSVファイル）</a
+            >
+            <br /><br />
+          </p>
+          <p>含まれている変数は以下のとおり。</p>
+          <ul>
+            <li><code>party</code>: 政党</li>
+            <li><code>n_cand</code>: 名簿掲載人数</li>
+            <li><code>n_priority</code>: 特定枠候補の人数</li>
+            <li><code>seats_won</code>: 比例区での獲得議席数</li>
+            <li><code>votes_party</code>: 政党名での得票数</li>
+            <li><code>votes_cand</code>: 所属候補者名での得票数</li>
+            <li>
+              <code>votes_total</code>: 総得票数（votes_party と votes_cand
+              の合計）
+            </li>
+            <li><code>vshare</code>: 比例区での相対得票率 (%)</li>
+          </ul>
 
           <p><br /></p>
           <br />
