--- a/jp/resources/index.html
+++ b/jp/resources/index.html
@@ -52,10 +52,8 @@
   <h2>第27回参議院議員通常選挙（2025年7月20日実施）の結果</h2>
     <ul>
       <li>選挙区：<a href="data/hc2025_prefectures.csv">CSVファイル</a></li>
-      <!--<li>比例区（候補者別）：<a href="data/hc2025_pr_candidates.csv">CSVファイル</a></li>
-      <li>比例区（政党別）：<a href="data/hc2025_pr_parties.csv">CSVファイル</a></li>-->
-      <li>比例区（候補者別）：集計中</li>
-      <li>比例区（政党別）：集計中</li>
+      <li>比例区（候補者別）：<a href="data/hc2025_pr_candidates.csv">CSVファイル</a></li>
+      <li>比例区（政党別）：<a href="data/hc2025_pr_parties.csv">CSVファイル</a></li>
       <li><a href="data/hc2025election.html" target="_blank">データに含まれる変数の説明</a></li>
       <li><p>データの文字コードは UTF-8 です。</p></li>
     </ul>
