--- a/jp/publications/index.html
+++ b/jp/publications/index.html
@@ -44,14 +44,13 @@
         <h3>論文</h3>
         <ul>
           <li>
-            Election Timing across Autocracy and Democracy (ETAD): A New Dataset
-            of National Election Dates（<a
+            <a href="https://doi.org/10.1016/j.electstud.2025.102964" target="_blank">Election Timing across Autocracy and Democracy (ETAD): A New Dataset
+            of National Election Dates<a/>（<a
               href="https://masaakihigashijima.com/"
               target="_blank"
               >東島雅昌</a
             >, 清水直樹, 鷲田任邦と共著）
-            <a class="booktitle">Electoral Studies</a> (accepted for
-            publication, 2025)
+            <a class="booktitle">Electoral Studies</a> 96, 102964 (August, 2025)
           </li>
           <li>
             <a href="https://doi.org/10.1093/poq/nfae022" target="_blank"
