--- a/research/index.html
+++ b/research/index.html
@@ -38,13 +38,16 @@
         <h3>Journal Articles</h3>
         <ul>
           <li>
-            Election Timing across Autocracy and Democracy (ETAD): A New Dataset
-            of National Election Dates（with
+            <a
+              href="https://doi.org/10.1016/j.electstud.2025.102964"
+              target="_blank"
+              >Election Timing across Autocracy and Democracy (ETAD): A New
+              Dataset of National Election Dates</a
+            >（with
             <a href="https://masaakihigashijima.com/" target="_blank"
               >Masaaki Higashijima</a
             >, Naoki Shimizu, and Hidekuni Washida)
-            <a class="booktitle">Electoral Studies</a> (accepted for
-            publication, 2025)
+            <a class="booktitle">Electoral Studies</a> 96, 102964 (August, 2025)
           </li>
 
           <li>
