update links to papers

--- a/research/index.html
+++ b/research/index.html
@@ -39,7 +39,7 @@
         <ul>
           <li>
             <a
-              href="https://doi.org/10.1016/j.electstud.2025.102964"
+              href="https://authors.elsevier.com/sd/article/S0261-3794(25)00070-8"
               target="_blank"
               >Election Timing across Autocracy and Democracy (ETAD): A New
               Dataset of National Election Dates</a
@@ -48,6 +48,12 @@
               >Masaaki Higashijima</a
             >, Naoki Shimizu, and Hidekuni Washida)
             <a class="booktitle">Electoral Studies</a> 96, 102964 (August, 2025)
+            [<a
+              class="abst"
+              href="https://yukiyanai.github.io/data_etad/"
+              target="_blank"
+              >Data</a
+            >]
           </li>
 
           <li>
