--- a/jp/publications/index.html
+++ b/jp/publications/index.html
@@ -44,13 +44,18 @@
         <h3>論文</h3>
         <ul>
           <li>
-            <a href="https://doi.org/10.1016/j.electstud.2025.102964" target="_blank">Election Timing across Autocracy and Democracy (ETAD): A New Dataset
+            <a href="https://authors.elsevier.com/sd/article/S0261-3794(25)00070-8" target="_blank">Election Timing across Autocracy and Democracy (ETAD): A New Dataset
             of National Election Dates<a/>（<a
               href="https://masaakihigashijima.com/"
               target="_blank"
               >東島雅昌</a
             >, 清水直樹, 鷲田任邦と共著）
-            <a class="booktitle">Electoral Studies</a> 96, 102964 (August, 2025)
+            <a class="booktitle">Electoral Studies</a> 96, 102964 (August, 2025) [<a
+              class="abst"
+              href="https://yukiyanai.github.io/data_etad/"
+              target="_blank"
+              >Data</a
+            >]
           </li>
           <li>
             <a href="https://doi.org/10.1093/poq/nfae022" target="_blank"
