--- a/data_etad/index.html
+++ b/data_etad/index.html
@@ -599,8 +599,8 @@ University of Technology</li>
 <p>This project was supported by JSPS KAKENHI Grant Numbers JP19H01447,
 JP22H00807, and JP23H00779.</p>
 <p>We thank Taihei Atarashi, Tomoyo Chisaka, Yuya Endo, Hisashi Kadoya,
-Takaaki Minamii, Tsubasa Nishimura, Lungta Seki, and Shinji Tsukada for
-helping us collect the data as our research assistants.</p>
+Yasuki Kudo, Takaaki Minamii, Tsubasa Nishimura, Lungta Seki, and Shinji
+Tsukada for helping us collect the data as our research assistants.</p>
 </div>
 
 
