--- a/jp/publications/index.html
+++ b/jp/publications/index.html
@@ -54,7 +54,7 @@
               class="abst"
               href="https://yukiyanai.github.io/data_etad/"
               target="_blank"
-              >Data</a
+              >データ</a
             >]
           </li>
           <li>
