--- a/data_etad/index.html
+++ b/data_etad/index.html
@@ -597,7 +597,7 @@ University of Technology</li>
 <div id="acknowledgments" class="section level2">
 <h2>Acknowledgments</h2>
 <p>This project was supported by JSPS KAKENHI Grant Numbers JP19H01447,
-JP22H00807, and JP23H00779.</p>
+JP22H00807, and JP23K25476.</p>
 <p>We thank Taihei Atarashi, Tomoyo Chisaka, Yuya Endo, Hisashi Kadoya,
 Yasuki Kudo, Takaaki Minamii, Tsubasa Nishimura, Lungta Seki, and Shinji
 Tsukada for helping us collect the data as our research assistants.</p>
