--- a/data_etad/index.html
+++ b/data_etad/index.html
@@ -12,7 +12,7 @@
 
 <meta name="date" content="2025-07-16" />
 
-<title>ETAD: Election Timing across Democracy and Autocracy</title>
+<title>ETAD: Election Timing across Autocracy and Democracy</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -545,8 +545,8 @@ display: none;
 
 
 
-<h1 class="title toc-ignore">ETAD: Election Timing across Democracy and
-Autocracy</h1>
+<h1 class="title toc-ignore">ETAD: Election Timing across Autocracy and
+Democracy</h1>
 <h3 class="subtitle">A Global Dataset of National Election Dates</h3>
 <h4 class="date">2025-07-16</h4>
 
