update job info

--- a/cv/index.html
+++ b/cv/index.html
@@ -53,10 +53,7 @@
             >
             (Aug 2021 - present)
           </li>
-          <li>
-            Visiting Research Fellow, Faculty of Social and Behavioural
-            Sciences, University of Amsterdam (Aug 2024 - present)
-          </li>
+
           <li>
             Visiting Scholar, Graduate School of Law, Kobe University (Apr 2019
             - present)
@@ -69,6 +66,10 @@
 
         <h3>Previous Positions</h3>
         <ul>
+          <li>
+            Visiting Research Fellow, Faculty of Social and Behavioural
+            Sciences, University of Amsterdam (Aug 2024 - Aug 2025)
+          </li>
           <li>
             Assistant Professor, School of Economics &amp; Management, Kochi
             University of Technology (Apr 2018 - Jul 2021)
