--- a/jp/cv/index.html
+++ b/jp/cv/index.html
@@ -115,6 +115,11 @@
             <td align="left">准教授</td>
           </tr>
           <tr>
+            <td align="left">&nbsp;&nbsp;2025年 8月</td>
+            <td align="left">アムステルダム大学政治学部</td>
+            <td align="left">客員研究員（2025年8月まで）</td>
+          </tr>
+          <tr>
             <td align="left"></td>
             <td align="center">現在に至る</td>
             <td align="left"></td>
