--- a/jp/classes/index.html
+++ b/jp/classes/index.html
@@ -45,7 +45,8 @@
 
         <h4>高知工科大学</h4>
         <ul>
-          <li>2024年8月〜2025年11月まで在外研究のため講義は担当しません。</li>
+          <li><a href="stat2/">統計学 2</a> (4Q)</li>
+          <li><a href="econometrics2/">計量経済学応用</a>（冬期集中）</li>
         </ul>
 
         <h3>過去の授業</h3>
@@ -53,9 +54,7 @@
         <h4>高知工科大学</h4>
         <ul>
           <li><a href="stat1/">統計学 1</a></li>
-          <li><a href="stat2/">統計学 2</a></li>
           <li><a href="econometrics1/">計量経済学</a></li>
-          <li><a href="econometrics2/">計量経済学応用</a></li>
           <li>Information Science III</li>
         </ul>
 
