--- a/research/index.html
+++ b/research/index.html
@@ -38,6 +38,20 @@
         <h3>Journal Articles</h3>
         <ul>
           <li>
+            Partisan Reactions to Endogenous Election Timing: Evidence from
+            Conjoint Experiments in Japan (with
+            <a href="https://masaakihigashijima.com/" target="_blank"
+              >Masaaki Higashijima</a
+            >, Naoki Shimizu, and Hidekuni Washida)
+            <a class="booktitle">Political Behavior</a> (accepted for
+            publication, Nov 2025) [<a
+              class="abst"
+              href="https://doi.org/10.7910/DVN/WWKXEU"
+              target="_blank"
+              >Replication Materials</a
+            >]
+          </li>
+          <li>
             <a
               href="https://authors.elsevier.com/sd/article/S0261-3794(25)00070-8"
               target="_blank"
@@ -47,8 +61,7 @@
             <a href="https://masaakihigashijima.com/" target="_blank"
               >Masaaki Higashijima</a
             >, Naoki Shimizu, and Hidekuni Washida)
-            <a class="booktitle">Electoral Studies</a> 96, 102964 (August, 2025)
-            [<a
+            <a class="booktitle">Electoral Studies</a> 96, 102964 (2025) [<a
               class="abst"
               href="https://yukiyanai.github.io/data_etad/"
               target="_blank"
