--- a/research/index.html
+++ b/research/index.html
@@ -38,8 +38,13 @@
         <h3>Journal Articles</h3>
         <ul>
           <li>
-            Partisan Reactions to Endogenous Election Timing: Evidence from
-            Conjoint Experiments in Japan (with
+            <a
+              href="https://link.springer.com/article/10.1007/s11109-025-10106-7"
+              target="_blank"
+              >Partisan Reactions to Endogenous Election Timing: Evidence from
+              Conjoint Experiments in Japan</a
+            >
+            (with
             <a href="https://masaakihigashijima.com/" target="_blank"
               >Masaaki Higashijima</a
             >, Naoki Shimizu, and Hidekuni Washida)
