--- a/jp/publications/index.html
+++ b/jp/publications/index.html
@@ -44,8 +44,8 @@
         <h3>論文</h3>
         <ul>
           <li>
-            Partisan Reactions to Endogenous Election Timing: Evidence from
-            Conjoint Experiments in Japan （<a
+            <a href="https://link.springer.com/article/10.1007/s11109-025-10106-7" target="_blank">Partisan Reactions to Endogenous Election Timing: Evidence from
+            Conjoint Experiments in Japan</a> （<a
               href="https://masaakihigashijima.com/"
               target="_blank"
               >東島雅昌</a
