--- a/jp/publications/index.html
+++ b/jp/publications/index.html
@@ -50,8 +50,7 @@
               target="_blank"
               >東島雅昌</a
             >, 清水直樹, 鷲田任邦と共著）
-            <a class="booktitle">Political Behavior</a> (accepted for
-            publication, Nov 2025) [<a
+            <a class="booktitle">Political Behavior</a> (Nov 25, 2025) [<a
               class="abst"
               href="https://doi.org/10.7910/DVN/WWKXEU"
               target="_blank"
