--- a/research/index.html
+++ b/research/index.html
@@ -48,8 +48,7 @@
             <a href="https://masaakihigashijima.com/" target="_blank"
               >Masaaki Higashijima</a
             >, Naoki Shimizu, and Hidekuni Washida)
-            <a class="booktitle">Political Behavior</a> (accepted for
-            publication, Nov 2025) [<a
+            <a class="booktitle">Political Behavior</a> (Nov 25, 2025) [<a
               class="abst"
               href="https://doi.org/10.7910/DVN/WWKXEU"
               target="_blank"
