--- a/teaching/index.html
+++ b/teaching/index.html
@@ -36,13 +36,24 @@
       <!-- InstanceBeginEditable name="content" -->
       <div class="content">
         <h2>Courses</h2>
-        
-        <p>On sabbatical leave from August 2024 to November 2025.</p>
 
-        <!--<h3>Current (Fall 2025)</h3>
+        <h3>Current (Fall 2025)</h3>
 
-        <h4>Kochi University of Technology</h4>-->
-        
+        <h4>Kochi University of Technology</h4>
+
+        <ul>
+          <li>
+            <a href="/jp/classes/stat2/" target="_blank">Statistics 2</a> (u; in
+            Japanese)
+          </li>
+          <li>
+            <a href="/jp/classes/econometrics2/" target="_blank"
+              >Applied Econometrics</a
+            >
+            (u; in Japanese)
+          </li>
+        </ul>
+
         <h3>Past</h3>
 
         <h4>Kochi University of Technology</h4>
@@ -57,16 +68,7 @@
             >
             (u; in Japanese)
           </li>
-          <li>
-            <a href="/jp/classes/stat2/" target="_blank">Statistics 2</a> (u; in
-            Japanse)
-          </li>
-          <li>
-            <a href="/jp/classes/econometrics2/" target="_blank"
-              >Applied Econometrics</a
-            >
-            (u; in Japanese)
-          </li>
+
           <li>Information Science III (u; in English)</li>
         </ul>
 
