--- a/jp/classes/stat2/index.html
+++ b/jp/classes/stat2/index.html
@@ -41,10 +41,10 @@
       <div class="content">
         <h2>統計学 2</h2>
 
-        <p>2023年度 第3クォータ 高知工科大学　経済・マネジメント学群</p>
+        <p>2025年度 第4クォータ 高知工科大学　経済・マネジメント学群</p>
 
         <h4>
-          <a class="black" href="docs/syllabus-stat2_2023-3Q.pdf">シラバス</a>
+          <a class="black" href="docs/syllabus-stat2_2025-4Q.pdf">シラバス</a>
         </h4>
 
         <br />
@@ -74,7 +74,7 @@
 
         <ul>
           <li>
-            宋財泫, 矢内勇生 (2022) 『<a
+            宋財泫, 矢内勇生（執筆中） 『<a
               href="http://www.jaysong.net/RBook/"
               target="_blank"
               >私たちのR：ベストプラクティスの探求</a
@@ -114,7 +114,7 @@
             <td align="left">
               &nbsp;&nbsp;Email: yanai.yuki [at] kochi-tech.ac.jp
             </td>
-            <td align="right">&copy; 2014-2022 Yuki Yanai&nbsp;&nbsp;</td>
+            <td align="right">&copy; 2014-2025 Yuki Yanai&nbsp;&nbsp;</td>
           </tr>
         </table>
         <!-- end .footer -->
