--- a/jp/classes/stat2/contents/R/stat2_2025_hw01.html
+++ b/jp/classes/stat2/contents/R/stat2_2025_hw01.html
@@ -474,6 +474,7 @@ display: none;
 <h1 class="title toc-ignore">KUT 統計学2</h1>
 <h3 class="subtitle">課題1</h3>
 <h4 class="author">矢内 勇生</h4>
+<h4 class="date">2025年12月12日</h4>
 
 </div>
 
