--- a/jp/publications/index.html
+++ b/jp/publications/index.html
@@ -461,7 +461,7 @@
           <li>
             <a class="black" href="http://www.apsanet.org/" target="_blank"
               >American Political Science Association</a
-            >： 2012 [x2], 2019, 2020, 2021, 2023
+            >： 2012 [x2], 2019, 2020, 2021, 2023, 2025
           </li>
           <li>
             <a class="black" href="http://www.apsanet.org/" target="_blank"
@@ -536,7 +536,7 @@
             「公共選択のフロンティア」優秀報告賞（原田賞）（2023年12月2日）
           </li>
           <li>
-            科学研究費補助金・基盤B, No.23H00779（2023-26年度）[研究代表者]
+            科学研究費補助金・基盤B, No.23K25476 [23H00779] （2023-26年度）[研究代表者]
           </li>
           <li>日本選挙学会, 優秀ポスター賞（2022年5月7日）</li>
           <li></li>
