update metrics2 for 2025

--- a/jp/classes/econometrics2/index.html
+++ b/jp/classes/econometrics2/index.html
@@ -41,14 +41,13 @@
       <div class="content">
         <h2>計量経済学応用</h2>
 
-        <p>2023年度 第3クォータ　高知工科大学　経済・マネジメント学群</p>
+        <p>2025年度 冬期集中　高知工科大学　経済・マネジメント学群</p>
 
-        <h4>
-          <a class="black" href="docs/syllabus_applied-metrics_2023-3Q.pdf"
+        <!--<h4>
+          <a class="black" href="docs/syllabus_applied-metrics_202-3Q.pdf"
             >シラバス</a
           >
-        </h4>
-
+        </h4> -->
         <br />
 
         <h3>授業の目的と到達目標</h3>
