--- a/jp/classes/econometrics2/contents/index.html
+++ b/jp/classes/econometrics2/contents/index.html
@@ -44,7 +44,7 @@
       <!-- InstanceBeginEditable name="content" -->
       <div class="content">
         <h1>計量経済学応用</h1>
-        <p>2023年度 第3クォータ　高知工科大学　経済・マネジメント学群</p>
+        <p>2025年度 　高知工科大学　経済・マネジメント学群</p>
         <p><a href="../">授業概要</a></p>
         <br />
 
@@ -55,7 +55,7 @@
         <p>
           講義で使用するスライドは
           <a
-            href="https://lms.kochi-tech.ac.jp/course/view.php?id=2824"
+            href="https://lms.kochi-tech.ac.jp/course/view.php?id=4307"
             target="_blank"
             >KUTLMS</a
           >
@@ -70,10 +70,10 @@
           <li>
             <a href="R/metrics2_intro.html">この授業で実習を行う準備</a>
           </li>
-          <li>
+          <!--<li>
             <a href="R/metrics2_2023_assignment1.html">課題1</a>
             （<strong>提出期限：2023年10月7日（土）午後5時</strong>）
-          </li>
+          </li>-->
         </ul>
 
         <h3>2. セレクションバイアス</h3>
@@ -110,7 +110,7 @@
         <ul>
           <li>
             <a href="R/propensity-score.html">傾向スコア</a
-            >（提出が必要な課題あり)
+            ><!--（提出が必要な課題あり)-->
           </li>
           <!--<li>
             <strong>課題の提出期限：2021年5月17日（月）午前10時</strong>
