--- a/jp/resources/index.html
+++ b/jp/resources/index.html
@@ -49,6 +49,15 @@
       <li><a href="https://github.com/yukiyanai/ETAD/" target="_blank">ETAD</a>：選挙タイミングに関するグローバルデータセット</li>
     </ul>
   
+  <h2>第51回衆議院議員総選挙（2026年2月8日実施）の結果</h2>
+    <ul>
+      <li>小選挙区：<a href="data/hr2026_districts.csv">CSVファイル</a></li>
+      <li>比例区（候補者別）：<a href="data/hr2026_pr_candidates.csv">CSVファイル</a></li>
+      <li>比例区（政党別）：<a href="data/hr2026_pr_parties.csv">CSVファイル</a></li>
+      <li><a href="data/hr2026election.html" target="_blank">データに含まれる変数の説明</a></li>
+      <li><p>データの文字コードは UTF-8 です。</p></li>
+     </ul>
+
   <h2>第27回参議院議員通常選挙（2025年7月20日実施）の結果</h2>
     <ul>
       <li>選挙区：<a href="data/hc2025_prefectures.csv">CSVファイル</a></li>
